hidden overflow + fixed height for category bar, moved to top

--- a/css/main-styles.less
+++ b/css/main-styles.less
@@ -270,24 +270,28 @@ footer {
 
 div.category-bar{
   
-   padding: 10px 40px;
+   padding: 1px 40px;
    padding-bottom: 5px;
    background: lighten(@light-gray, 1%);
-   border-top: 1px solid @silver;
+   border-bottom: 1px solid @silver;
+   height: 52px;
+   overflow: hidden;
 
    text-align: left;
    
     div.category-dropdown{
         position: relative;
+        display: inline-block;
+        padding-right: 40px;
 
 
         h3{
             color: @dark-blue;
             font-family: 'Lato';
             font-size: 20px;
-            line-height: 25px;
+            line-height: 42px;
             padding-left: 5px;
-            margin-bottom: 5px;
+            
             display: inline-block;
 
         }
@@ -296,14 +300,14 @@ div.category-bar{
         display: inline-block;
         padding-left: 10px;
         font-size: 20px;
-        line-height: 25px;
+        line-height: 42px;
         color: @dark-blue;
         position: absolute;
         top: 0;
         }
     }   
 
-    ul {
+    ul { 
         a{
             color: @dark-blue;
             height: 100%;
